--- a/.classpath
+++ b/.classpath
@@ -176,5 +176,17 @@
 	<classpathentry kind="lib" path="D:/Afeka/שנה ג/אינטגרטיבית/ioc-db-rest-lib/ioc-db-rest-lib/tomcat-embed-websocket-9.0.16.jar"/>
 	<classpathentry kind="lib" path="D:/Afeka/שנה ג/אינטגרטיבית/ioc-db-rest-lib/ioc-db-rest-lib/validation-api-2.0.1.Final.jar"/>
 	<classpathentry kind="lib" path="D:/Afeka/שנה ג/אינטגרטיבית/ioc-db-rest-lib/ioc-db-rest-lib/xmlunit-core-2.6.2.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/spring-boot-starter-actuator-2.2.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/hibernate-annotations-3.5.6-Final.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/hibernate-annotations-3.5.6-Final.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/hibernate-commons-annotations-3.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/hibernate-core-3.5.6-Final.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="D:/Afeka/פרויקט גמר/jar_files/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
