--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,6 +1,6 @@
 
 #spring.profiles.active=production,default
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_example?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
