recommendation system not complete, added tests

--- a/bin/application.properties
+++ b/bin/application.properties
@@ -12,4 +12,9 @@ spring.datasource.password=rotan8875
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto =  create
+spring.jpa.hibernate.ddl-auto =  create-drop
+
+## Recommendation Algorithm properties
+
+recommendations.kmeans.k=1
+recommendations.kmeans.maxIterations=20
